src/style.css
@import "tailwindcss";
@import "tailwindcss-primeui";
@import 'primeicons/primeicons.css';

:root {
  font: 18px/145% 'SUSE Mono', system-ui, 'Segoe UI', Roboto, sans-serif;
  letter-spacing: 0.18px;
  text-transform: uppercase;
  color: var(--p-surface-300);
  background: var(--p-surface-900);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body {
  margin: 0;
  height: 100%;
}

p {
  margin: 0;
}

#app {
  width: 1126px;
  max-width: 100%;
  margin: 0 auto;
  text-align: center;
  height: 100%;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 6px;
  background-color: transparent;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: var(--p-surface-500);
  border-radius: 6px;
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--p-surface-300);
}

.v-enter-active,
.v-leave-active {
  transition: opacity 0.15s ease;
}

.v-enter-from,
.v-leave-to {
  opacity: 0;
}

@layer app {
  .p-textarea {
    font-weight: 600 !important;
    text-transform: uppercase !important;
    border-width: 2px !important;
  }

  .p-inputtext {
    font-weight: 600 !important;
    text-transform: uppercase !important;
    border-width: 2px !important;
  }

  .p-inputgroupaddon {
    border-block-start-width: 2px !important;
    border-block-end-width: 2px !important;
  }

  .p-inputgroupaddon:last-child {
    border-inline-end-width: 2px !important;
  }

  .p-button-label {
    font-weight: 600 !important;
    text-transform: uppercase !important;
  }

  .p-dialog {
    border-width: 2px !important;
    background-color: var(--p-surface-950) !important;
    border-color: var(--p-surface-900) !important;
  }
}

